--- a/frontend/vagabond/src/pages/myTrips/myTrip/EditTrip.module.css
+++ b/frontend/vagabond/src/pages/myTrips/myTrip/EditTrip.module.css
@@ -10,3 +10,15 @@
 	display:flex;
 	gap: 10px;
 }
+
+.titleWraper{
+	position: relative;
+}
+.backButton{
+	position: absolute;
+	left: 0px;
+	margin-top: 1em;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
